Added song text!

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 	</title>
 </head>
 <body>
-	Just for test
+	<h1>Hooked on a feeling</h1>
+	<p>
+		I can't stop this feeling
+		It inside of me
+		Girl U just don't realise
+		What U do with me
+	</p>
 </body>
 </html>
